--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "expo": "^40.0.1",
     "expo-status-bar": "~1.0.3",
+    "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-icons": "^4.2.0",
