--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
+    "axios": "^0.21.1",
     "expo": "^40.0.1",
     "expo-status-bar": "~1.0.3",
     "lodash": "^4.17.21",
@@ -28,7 +29,8 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
