--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,14 +10,16 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/viewpager": "^5.0.9",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.3",
     "expo": "^40.0.1",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-icons": "^4.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
