--- a/Backend/au_cares_backend/package.json
+++ b/Backend/au_cares_backend/package.json
@@ -24,8 +24,8 @@
   "homepage": "https://github.com/kennedy15/Au-Health-App#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "epress": "0.0.1-security",
-    "express": "file:node_modules/express",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7"
