--- a/Backend/au_cares_backend/package.json
+++ b/Backend/au_cares_backend/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "au_cares_backend",
-  "version": "1.0.0",
-  "description": "AU Health App Capstone",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kennedy15/Au-Health-App.git"
-  },
-  "keywords": [
-    "American",
-    "University",
-    "Health",
-    "App"
-  ],
-  "author": "Nathan, Isabella, Reika, Tami, Anthony, Elisabetta",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kennedy15/Au-Health-App/issues"
-  },
-  "homepage": "https://github.com/kennedy15/Au-Health-App#readme",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
-    "nodemailer": "^6.5.0",
-    "nodemon": "^2.0.7"
-  }
+    "name": "au_cares_backend",
+    "version": "1.0.0",
+    "description": "AU Health App Capstone",
+    "main": "app.js",
+    "scripts": {
+        "devStart": "nodemon api-routes.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/kennedy15/Au-Health-App.git"
+    },
+    "keywords": [
+        "American",
+        "University",
+        "Health",
+        "App"
+    ],
+    "author": "Nathan, Isabella, Reika, Tami, Anthony, Elisabetta",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/kennedy15/Au-Health-App/issues"
+    },
+    "homepage": "https://github.com/kennedy15/Au-Health-App#readme",
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mysql": "^2.18.1",
+        "nodemailer": "^6.5.0",
+        "nodemon": "^2.0.7"
+    }
 }
