--- a/Backend/au_cares_backend/package.json
+++ b/Backend/au_cares_backend/package.json
@@ -4,7 +4,7 @@
     "description": "AU Health App Capstone",
     "main": "app.js",
     "scripts": {
-        "devStart": "nodemon api-routes.js",
+        "devStart": "nodemon app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
