Connected backend with database

--- a/Backend/au_cares_backend/config/dot.env
+++ b/Backend/au_cares_backend/config/dot.env
@@ -1,9 +1,9 @@
 #Will hold various API keys in here and DB
 
 #DB pass
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=my_password_123
+DB_HOST= 127.0.0.1
+DB_USER= root
+DB_PASS= AuHealthApp123987$%^
 
 
 #API SECRETS
