--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/viewpager": "^5.0.9",
+    "@react-native-community/viewpager": "^4.2.0",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.3",
@@ -29,12 +29,13 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.7.0",
+    "react-native-pager-view": "^5.1.2",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^4.1.2",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.15.5",
     "react-native-wheel-of-fortune": "^1.5.4",
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.2",
