--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/viewpager": "^5.0.9",
@@ -23,16 +24,21 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-icons": "^4.2.0",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.7.0",
+    "react-native-pie": "^1.1.2",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-svg": "^12.1.0",
+    "react-native-switch": "^2.0.0",
     "react-native-web": "~0.13.12",
     "react-native-wheel-of-fortune": "^1.5.4",
     "react-navigation": "^4.4.4",
