--- a/Backend/au_cares_backend/package.json
+++ b/Backend/au_cares_backend/package.json
@@ -25,9 +25,11 @@
     "homepage": "https://github.com/kennedy15/Au-Health-App#readme",
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "crypto": "^1.0.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.29.1",
         "mysql": "^2.18.1",
         "nodemailer": "^6.5.0",
         "nodemon": "^2.0.7"
