--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,6 +33,7 @@
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^2.1.0",
+    "react-native-render-html": "^5.1.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "^0.15.5",
