intalled react native switch

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/hooks": "^2.6.0",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "0.1.10", 
     "@react-native-community/viewpager": "^4.2.0",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
@@ -40,6 +40,7 @@
     "react-native-render-html": "^5.1.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-switch": "^2.0.0",
     "react-native-web": "^0.15.5",
     "react-native-wheel-of-fortune": "^1.5.4",
     "react-navigation": "^4.4.4",
