--- a/frontend/app.json
+++ b/frontend/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Au-Health-App",
     "slug": "Au-Health-App",
+    "entryPoint": "./src/App.tsx",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -13,9 +14,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
