--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -3,12 +3,12 @@ name: Backend
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - "backend/**"
   pull_request:
     branches:
-      - master
+      - main
     paths:
       - "backend/**"
 
