--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -3,12 +3,12 @@ name: Frontend
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - "frontend/**"
   pull_request:
     branches:
-      - master
+      - main
     paths:
       - "frontend/**"
 
