--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,5 +1,9 @@
 name: Backend
 
+defaults:
+  run:
+    working-directory: backend
+
 on:
   push:
     branches:
@@ -16,17 +20,14 @@ jobs:
   build:
     name: Build
     environment: Test
-    strategy:
-      matrix:
-        node-version: [16.x]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: yarn install and build
-        run: |
-          cd frontend
-          yarn
+          node-version: 16.x
+      - name: yarn install
+        run: yarn
+      - name: build
+        run: yarn build
