--- a/frontend/app.json
+++ b/frontend/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Au-Health-App",
     "slug": "Au-Health-App",
+    "bundleIdentifier": "health.au.client",
     "entryPoint": "./src/App.tsx",
     "version": "1.0.0",
     "orientation": "portrait",
