--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -30,6 +30,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16.x
+      - uses: c-hive/gha-yarn-cache@v2
+        with:
+          directory: frontend
       - name: yarn install
         run: yarn
       - name: build
