--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -25,6 +25,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 16.x
+      - uses: c-hive/gha-yarn-cache@v2
+        with:
+          directory: frontend
       - uses: expo/expo-github-action@v6
         with:
           expo-version: 4.x
@@ -42,6 +45,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 16.x
+      - uses: c-hive/gha-yarn-cache@v2
+        with:
+          directory: frontend
       - uses: expo/expo-github-action@v6
         with:
           expo-version: 4.x
