--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,6 @@
     "homepage": "https://github.com/kennedy15/Au-Health-App#readme",
     "dependencies": {
         "bcrypt": "^5.0.1",
-        "crypto": "^1.0.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
@@ -33,5 +32,21 @@
         "mysql": "^2.18.1",
         "nodemailer": "^6.5.0",
         "nodemon": "^2.0.7"
+    },
+    "devDependencies": {
+        "@types/dotenv-safe": "^8.1.2",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.7.9",
+        "@typescript-eslint/eslint-plugin": "^4.30.0",
+        "@typescript-eslint/parser": "^4.30.0",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-jest": "^24.4.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "gen-env-types": "^1.3.0",
+        "jest": "^27.1.0",
+        "prettier": "^2.3.2",
+        "ts-node-dev": "^1.1.8",
+        "typescript": "^4.4.2"
     }
 }
