--- a/backend/package.json
+++ b/backend/package.json
@@ -1,52 +1,59 @@
 {
-    "name": "au_cares_backend",
-    "version": "1.0.0",
-    "description": "AU Health App Capstone",
-    "main": "app.js",
-    "scripts": {
-        "devStart": "nodemon app.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/kennedy15/Au-Health-App.git"
-    },
-    "keywords": [
-        "American",
-        "University",
-        "Health",
-        "App"
-    ],
-    "author": "Nathan, Isabella, Reika, Tami, Anthony, Elisabetta",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/kennedy15/Au-Health-App/issues"
-    },
-    "homepage": "https://github.com/kennedy15/Au-Health-App#readme",
-    "dependencies": {
-        "bcrypt": "^5.0.1",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "jsonwebtoken": "^8.5.1",
-        "moment": "^2.29.1",
-        "mysql": "^2.18.1",
-        "nodemailer": "^6.5.0",
-        "nodemon": "^2.0.7"
-    },
-    "devDependencies": {
-        "@types/dotenv-safe": "^8.1.2",
-        "@types/jest": "^27.0.1",
-        "@types/node": "^16.7.9",
-        "@typescript-eslint/eslint-plugin": "^4.30.0",
-        "@typescript-eslint/parser": "^4.30.0",
-        "eslint": "^7.32.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-jest": "^24.4.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "gen-env-types": "^1.3.0",
-        "jest": "^27.1.0",
-        "prettier": "^2.3.2",
-        "ts-node-dev": "^1.1.8",
-        "typescript": "^4.4.2"
-    }
+  "name": "au_cares_backend",
+  "version": "1.0.0",
+  "description": "AU Health App Capstone",
+  "main": "dist/index.js",
+  "scripts": {
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "test": "jest",
+    "build": "tsc",
+    "gen-env": "gen-env-types .env -o src/env.d.ts -e . "
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kennedy15/Au-Health-App.git"
+  },
+  "keywords": [
+    "American",
+    "University",
+    "Health",
+    "App"
+  ],
+  "author": "Nathan, Isabella, Reika, Tami, Anthony, Elisabetta",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kennedy15/Au-Health-App/issues"
+  },
+  "homepage": "https://github.com/kennedy15/Au-Health-App#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.5.0",
+    "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/dotenv-safe": "^8.1.2",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/mysql": "^2.15.19",
+    "@types/node": "^16.7.9",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "gen-env-types": "^1.3.0",
+    "jest": "^27.1.0",
+    "prettier": "^2.3.2",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.2"
+  }
 }
